--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- below stylesheet comes after in order to override styling above -->
     <link rel="stylesheet" type="text/css" href="style.css"> 
   </head>
-
+<!-- Jeremy is a boy -->
   <body>
       <div class="container">
           <div class="navigation">
